@@ -36,6 +36,7 @@
 #include "cvl/cvl_error.h"
 #include "cvl/cvl_gl.h"
 #include "cvl/cvl_frame.h"
+#include "cvl/cvl_basic.h"
 #include "cvl/cvl_wavelets.h"
 
 #include "glsl/wavelets/dwt_step1.glsl.h"
@@ -204,6 +205,12 @@ void cvl_wavelets_idwt(cvl_frame_t *dst, cvl_frame_t *src, cvl_frame_t *tmp, int
     cvl_frame_t *ping = src;
     cvl_frame_t *pong = tmp;
     
+    if (level > 1)
+    {
+	cvl_copy(tmp, src);
+	cvl_copy(dst, src);
+    }
+
     for (int l = level - 1; l >= 0; l--)
     {
 	float level_boundary = 1.0f / (float)mh_powi(2, l);
@@ -216,12 +223,16 @@ void cvl_wavelets_idwt(cvl_frame_t *dst, cvl_frame_t *src, cvl_frame_t *tmp, int
 
 	ping = pong;
 	pong = (ping == tmp ? dst : tmp);
+
+	//mh_msg_wrn("IDWT: Level %d, lb = %g, pong == dst: %d", l, level_boundary, (int)(pong == dst));
 	
 	glUseProgram(step2_prg);
 	glUniform1f(glGetUniformLocation(step2_prg, "texwidth"), texwidth);
 	glUniform1f(glGetUniformLocation(step2_prg, "texheight"), texheight);
 	glUniform1f(glGetUniformLocation(step2_prg, "level_boundary"), level_boundary);
 	cvl_wavelets_dwt_helper(pong, ping, level_boundary);
+
+	//cvl_save_pfs(mh_asprintf("idwt-l%d.pfs", l), pong);
 
 	ping = pong;
 	pong = (ping == tmp ? dst : tmp);
